[package]
name = "example_rapier"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: Replace the * by the latest version number.
rapier2d = { version = "*", features = [ "simd-stable" ] }
nannou = "*"

[profile.release]
opt-level = 3

[[example]]
name = "test1"
path = "src/example/test1.rs"

[[example]]
name = "test2"
path = "src/example/test2.rs"
